Closed Bug 1812490 Opened 3 years ago Closed 3 years ago

Crash in [@ mozilla::dom::ContentParent::GetNewOrUsedLaunchingBrowserProcess]

Categories

(Core :: DOM: Content Processes, defect)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox109 --- unaffected
firefox110 --- unaffected
firefox111 + fixed

People

(Reporter: mccr8, Assigned: jstutte)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/d34b578b-d546-40eb-bb67-4453c0230125

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(false) (Late attempt to GetNewOrUsedLaunchingBrowserProcess!)

Top 10 frames of crashing thread:

0  libxul.so  mozilla::dom::ContentParent::GetNewOrUsedLaunchingBrowserProcess  dom/ipc/ContentParent.cpp:1055
1  libxul.so  mozilla::dom::ContentParent::GetNewOrUsedBrowserProcessAsync  dom/ipc/ContentParent.cpp:1127
2  libxul.so  mozilla::dom::RemoteWorkerManager::LaunchNewContentProcess  dom/workers/remoteworkers/RemoteWorkerManager.cpp:708
2  libxul.so  mozilla::detail::RunnableFunction<mozilla::dom::RemoteWorkerManager::LaunchNewContentProcess  xpcom/threads/nsThreadUtils.h:546
3  libxul.so  mozilla::RunnableTask::Run  xpcom/threads/TaskController.cpp:539
3  libxul.so  mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:852
4  libxul.so  mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:684
4  libxul.so  mozilla::TaskController::ProcessPendingMTTask  xpcom/threads/TaskController.cpp:462
4  libxul.so  mozilla::TaskController::InitializeInternal const  xpcom/threads/TaskController.cpp:188
4  libxul.so  mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal  xpcom/threads/nsThreadUtils.h:546

There was a big crash spike on this same build, so I don't know if this is some weird side effect of that or what.

Flags: needinfo?(jstutte)
Regressed by: 1811195

Set release status flags based on info from the regressing bug 1811195

Assignee: nobody → jstutte
Status: NEW → ASSIGNED
Duplicate of this bug: 1812099
Flags: needinfo?(jstutte)
Pushed by jstutte@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/265ddb17e99d Check for shutdown when executing async launch request. r=asuth
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
Duplicate of this bug: 1812492
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: