Bug 1812490 - Check for shutdown when executing async launch request. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D167904